--- a/.github/workflows/aks.yml
+++ b/.github/workflows/aks.yml
@@ -59,7 +59,7 @@ jobs:
             remediationAction: "None"
             ciBackLink: "https://github.com/dt-demos/github-actions/actions/runs/${{ github.run_id }}"
             tags:
-              - SERVICE:service:frontend
+              - PROCESS_GROUP_INSTANCE:service:frontend
             dimensions:
               project: "dt-orders"
               repository-owner: ${{ github.repository_owner }}
