--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,6 +44,19 @@ jobs:
               ciBackLink: "https://github.com/dt-demos/"
               entities:
                 - SERVICE-661D74E40E3C3655
+
+      - name: Test CUSTOM_INFO
+        uses: dynatrace-oss/dynatrace-github-action@v6
+        with:
+          url: '${{ secrets.DT_URL }}'
+          token: '${{ secrets.DT_TOKEN }}'
+          events: |
+            - title: "CUSTOM_INFO title"
+              type: CUSTOM_INFO
+              description: "CUSTOM_INFO description"
+              source: GitHub
+              entities:
+                - SERVICE-661D74E40E3C3655
                 
       - name: Build count
         uses: dynatrace-oss/dynatrace-github-action@v6
