--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
         run: echo Hello, world!
         
       - name: Test CUSTOM_DEPLOYMENT
-        uses: dynatrace-oss/dynatrace-github-action@v6
+        uses: dynatrace-oss/dynatrace-github-action
         with:
           url: '${{ secrets.DT_URL }}'
           token: '${{ secrets.DT_TOKEN }}'
