--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,6 @@
-# This is a basic workflow to help you get started with Actions
+# requires the following secrets:
+# DT_URL
+# DT_TOKEN 
 
 name: Test Dynatrace OSS Action
 
@@ -15,7 +17,6 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
