adjust run command

--- a/.github/workflows/evaluation.yml
+++ b/.github/workflows/evaluation.yml
@@ -37,4 +37,4 @@ jobs:
         DEBUG: ${{ env.DEBUG }}
     steps:
       - name: SLO Evaluation
-        run:  sloevaluation
+        run: action.sh sloevaluation
