adjust run command

--- a/.github/workflows/evaluation.yml
+++ b/.github/workflows/evaluation.yml
@@ -35,7 +35,5 @@ jobs:
         END: ${{ env.END }}
         TIMEFRAME: ${{ env.TIMEFRAME }}
         DEBUG: ${{ env.DEBUG }}
-    steps:
-      - uses: actions/checkout@v2
-      - name: SLO Evaluation
-        run: sloevaluation
+      args:
+        - sloevaluation
