adjust run command

--- a/.github/workflows/evaluation.yml
+++ b/.github/workflows/evaluation.yml
@@ -37,3 +37,6 @@ jobs:
         DEBUG: ${{ env.DEBUG }}
       args:
         - sloevaluation
+    steps:
+      - uses: actions/checkout@v2
+      - name: SLO Evaluation
