adjust run command

--- a/.github/workflows/evaluation.yml
+++ b/.github/workflows/evaluation.yml
@@ -35,7 +35,7 @@ jobs:
         END: ${{ env.END }}
         TIMEFRAME: ${{ env.TIMEFRAME }}
         DEBUG: ${{ env.DEBUG }}
-      args:
+      options:
         - sloevaluation
     steps:
       - uses: actions/checkout@v2
