--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,7 +44,7 @@ jobs:
               ciBackLink: "https://www.dyntrace.com"
               deploymentVersion: "123"
               tags:
-                - PROCESS_GROUP_INSTANCE:service:order
+                - SERVICE:service:order
               dimensions:
                 project: "dt-orders"
                 repository-owner: ${{ github.repository_owner }}
@@ -62,7 +62,7 @@ jobs:
               description: "CUSTOM_INFO description"
               source: GitHub
               tags:
-                - PROCESS_GROUP_INSTANCE:service:order
+                - SERVICE:service:order
                 
       - name: Build count
         uses: dynatrace-oss/dynatrace-github-action@v7
