--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,13 +38,34 @@ jobs:
           events: |
             - type: CUSTOM_DEPLOYMENT
               source: GitHub
-              deploymentName: "CUSTOM_DEPLOYMENT deploymentName"
+              deploymentName: "CUSTOM_DEPLOYMENT deploymentName to SERVICE"
               deploymentProject: "CUSTOM_DEPLOYMENT deploymentProject"
               remediationAction: "CUSTOM_DEPLOYMENT remediationAction"
               ciBackLink: "https://www.dyntrace.com"
               deploymentVersion: "123"
               tags:
                 - SERVICE:service:order
+              dimensions:
+                project: "dt-orders"
+                repository-owner: ${{ github.repository_owner }}
+                repository: "https://github.com/${{ github.repository }}"
+                repository-branch: "${{ github.ref }}"
+
+      - name: Test CUSTOM_DEPLOYMENT
+        uses: dynatrace-oss/dynatrace-github-action@v7
+        with:
+          url: '${{ secrets.DT_URL }}'
+          token: '${{ secrets.DT_TOKEN }}'
+          events: |
+            - type: CUSTOM_DEPLOYMENT
+              source: GitHub
+              deploymentName: "CUSTOM_DEPLOYMENT deploymentName to PROCESS_GROUP_INSTANCE"
+              deploymentProject: "CUSTOM_DEPLOYMENT deploymentProject"
+              remediationAction: "CUSTOM_DEPLOYMENT remediationAction"
+              ciBackLink: "https://www.dyntrace.com"
+              deploymentVersion: "123"
+              tags:
+                - PROCESS_GROUP_INSTANCE:service:order
               dimensions:
                 project: "dt-orders"
                 repository-owner: ${{ github.repository_owner }}
