--- a/.github/workflows/aks-order.yml
+++ b/.github/workflows/aks-order.yml
@@ -58,6 +58,7 @@ jobs:
             deploymentName: "Deploy order version ${{ github.event.inputs.order-version }}"
             deploymentVersion: "${{ github.event.inputs.order-version }}"
             deploymentProject: "dt-orders"
+            ciBackLink: "https://github.com/dt-demos/github-actions/actions/runs/${{ github.run_id }}"
             tags:
               - PROCESS_GROUP_INSTANCE:service:order
             dimensions:
