--- a/.github/workflows/aks-order.yml
+++ b/.github/workflows/aks-order.yml
@@ -59,6 +59,7 @@ jobs:
             deploymentVersion: "${{ github.event.inputs.order-version }}"
             deploymentProject: "dt-orders"
             ciBackLink: "https://github.com/dt-demos/github-actions/actions/runs/${{ github.run_id }}"
+            remediationAction: "None"
             tags:
               - PROCESS_GROUP_INSTANCE:service:order
             dimensions:
