--- a/manifests/catalog-service.yml
+++ b/manifests/catalog-service.yml
@@ -25,6 +25,9 @@ spec:
         ports:
         - containerPort: 8080
           name: catalog
+        env:
+        - name: DT_CUSTOM_PROP
+          value: "project=dt-orders service=catalog stage=dev"
 ---
 apiVersion: v1
 kind: Service
