--- a/manifests/catalog-service.yml
+++ b/manifests/catalog-service.yml
@@ -17,6 +17,10 @@ spec:
         app.kubernetes.io/part-of: "dt-orders"
         app.kubernetes.io/managed-by: "helm"
         app.kubernetes.io/created-by: "dynatrace-demos"
+      annotations:
+        project: dt-orders
+        service: catalog
+
     spec:
       containers:
       - name: catalog
@@ -27,7 +31,7 @@ spec:
           name: catalog
         env:
         - name: DT_CUSTOM_PROP
-          value: "project=dt-orders service=catalog stage=dev"
+          value: "project=dt-orders service=catalog"
 ---
 apiVersion: v1
 kind: Service
