--- a/manifests/frontend.yml
+++ b/manifests/frontend.yml
@@ -17,6 +17,9 @@ spec:
         app.kubernetes.io/part-of: dt-orders
         app.kubernetes.io/managed-by: helm
         app.kubernetes.io/created-by: dynatrace-demos
+      annotations:
+        project: dt-orders
+        service: frontend
     spec:
       containers:
       - name: frontend
@@ -27,7 +30,7 @@ spec:
           name: frontend
         env:
         - name: DT_CUSTOM_PROP
-          value: "project=dt-orders service=frontend stage=dev"
+          value: "project=dt-orders service=frontend"
 ---
 apiVersion: v1
 kind: Service
