--- a/.github/workflows/aks-order.yml
+++ b/.github/workflows/aks-order.yml
@@ -16,7 +16,7 @@ env:
   REGISTRY_NAME: dtdemos
   CLUSTER_NAME: jahn-aks-demo
   CLUSTER_RESOURCE_GROUP: jahn-aks-demo
-  NAMESPACE: dt-orders
+  NAMESPACE: dev
 
 jobs:
   deploy:
