--- a/.github/workflows/aks-order.yml
+++ b/.github/workflows/aks-order.yml
@@ -33,9 +33,13 @@ jobs:
         cluster-name: ${{ env.CLUSTER_NAME }}
         resource-group: ${{ env.CLUSTER_RESOURCE_GROUP }}
 
-    - name: "Create namespace if doesn't exist"
+    - name: "Create k8 namespace"
       run: |
         kubectl create namespace ${{ env.NAMESPACE }} --dry-run=client -o json | kubectl apply -f -
+
+    - name: "Create k8 rolebinding for dt k8 dashboard"
+      run: |
+        kubectl -n dev create rolebinding default-view --clusterrole=view --serviceaccount=dev:default
 
     - name: "Deploy order-service"
       uses: azure/k8s-deploy@v1.4
