--- a/.github/workflows/evaluation.yml
+++ b/.github/workflows/evaluation.yml
@@ -38,8 +38,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: ls
-        run: ls -l /
-      - name: pwd
-        run: pwd
+        run: ls -l /keptn
       - name: SLO Evaluation
-        run: sloevaluation
+        run: /keptn/action.sh sloevaluation
