--- a/.github/workflows/evaluation.yml
+++ b/.github/workflows/evaluation.yml
@@ -40,4 +40,4 @@ jobs:
       - name: ls
         run: ls -l /keptn
       - name: SLO Evaluation
-        run: /keptn/action.sh sloevaluation
+        run: cd /keptn && ./action.sh sloevaluation
