--- a/.github/workflows/evaluation.yml
+++ b/.github/workflows/evaluation.yml
@@ -11,7 +11,7 @@ env:
   KEPTN_PROJECT: dt-orders
   KEPTN_SERVICE: catalog
   KEPTN_STAGE: dev
-  LABELS: "runId: ${{ github.run_id }},executedBy: GitHub, Job: https://github.com/dt-demos/github-actions/actions/runs/${{ github.run_id }}"            
+  LABELS: "runId=${{ github.run_id }},executedBy=GitHub,Job=https://github.com/dt-demos/github-actions/actions/runs/${{ github.run_id }}"            
   #START: "2021-06-09T21:00:00"
   #END: "2021-06-09T22:00:00"
   TIMEFRAME: 5m
