--- a/.github/workflows/evaluation.yml
+++ b/.github/workflows/evaluation.yml
@@ -37,4 +37,4 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: SLO Evaluation
-        run: ./action.sh sloevaluation
+        run: /keptn/action.sh sloevaluation
