--- a/.github/workflows/monaco.yml
+++ b/.github/workflows/monaco.yml
@@ -15,6 +15,8 @@ jobs:
         DT_API_TOKEN: ${{ secrets.DT_TOKEN }}
         NEW_CLI: "1"
     steps:
+      # github automatically creates a volume to the checked out code
+      # so we can reference them via ./foldername
       - uses: actions/checkout@v2
       
       - name: Monaco version
